[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="UI" type="VBoxContainer"]
margin_top = 4.23785
margin_right = 96.0
margin_bottom = 382.238
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_right = 96.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="."]
margin_top = 30.0
margin_right = 96.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 208 )
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roll" type="Button" parent="."]
margin_top = 242.0
margin_right = 96.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Summed" type="Label" parent="."]
margin_top = 272.0
margin_right = 96.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sum" type="Button" parent="."]
margin_top = 315.0
margin_right = 96.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )
text = "Summ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modifier" type="Label" parent="."]
margin_top = 345.0
margin_right = 96.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="."]
margin_top = 388.0
margin_right = 96.0
margin_bottom = 414.0
custom_fonts/font = SubResource( 1 )
text = "+ Modifier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="."]
margin_top = 418.0
margin_right = 96.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 1 )
text = "- Modifier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dice" type="Label" parent="."]
margin_top = 448.0
margin_right = 96.0
margin_bottom = 487.0
custom_fonts/font = SubResource( 2 )
text = "6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus Dice" type="Button" parent="."]
margin_top = 491.0
margin_right = 96.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 1 )
text = "+ Dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus Dice" type="Button" parent="."]
margin_top = 521.0
margin_right = 96.0
margin_bottom = 547.0
rect_pivot_offset = Vector2( 1171.57, 484.287 )
custom_fonts/font = SubResource( 1 )
text = "- Dice"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="Sum" to="." method="_on_Sum_pressed"]
[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="Plus Dice" to="." method="_on_Plus_Dice_pressed"]
[connection signal="pressed" from="Minus Dice" to="." method="_on_Minus_Dice_pressed"]
